# listed

./: .gitignore  LICENSE  README.md  mise.toml  pyproject.toml
.github/workflows/: build.yml  ci.yml  release.yml
src/: main.py
test/: test_main.py
