[project]
name = "listed"
description = "List files with respect to ignore file"
authors = [
  { name = "klephron", email = "klephron.dev@gmail.com" }
]
readme = "README.md"
license-files = ["LICEN[CS]E*"]
dynamic = ["version"]
requires-python = "~=3.12,<4.0"
dependencies = [
  "pathspec~=0.12",
]

[project.urls]
Repository = "https://github.com/klephron/listed"

[project.scripts]
listed = "src.main:main"

[dependency-groups]
lint = [
  "ruff>=0.14",
  "mypy>=1.18",
]
test = [
  "pytest>=9.0.1",
]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
]

[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.5.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
  "test/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.dev]
dependency-groups = [
  "test",
]
