[project]
name = "listed"
description = "List files with respect to ignore file"
authors = [
  { name = "klephron", email = "klephron.dev@gmail.com" }
]
readme = "README.md"
license-files = ["LICEN[CS]E*"]
dynamic = ["version"]
requires-python = "~=3.12,<4.0"
dependencies = [
  "pathspec~=0.12",
]

[project.urls]
Tracker = "https://github.com/klephron/listed/issues"
Source = "https://github.com/klephron/listed"

[project.scripts]
listed = "src.main:main"

[dependency-groups]
lint = [
  "ruff>=0.14.5",
  "mypy>=1.18.2",
]
test = [
  "pytest>=9.0.1",
]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
]

[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.5.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
  ".github/**",
  "**/.gitignore",
  "test/**",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/__version.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.dev]
dependency-groups = ["dev"]

[tool.pytest]
testpaths = ["test"]
